WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118397
Crash when createPluginInternal ends up destroying the plug-in
https://bugs.webkit.org/show_bug.cgi?id=118397
Summary
Crash when createPluginInternal ends up destroying the plug-in
Anders Carlsson
Reported
2013-07-04 11:25:44 PDT
Crash when createPluginInternal ends up destroying the plug-in
Attachments
Patch
(2.26 KB, patch)
2013-07-04 11:27 PDT
,
Anders Carlsson
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-07-04 11:27:45 PDT
Created
attachment 206103
[details]
Patch
Anders Carlsson
Comment 2
2013-07-04 11:43:02 PDT
Committed
r152403
: <
http://trac.webkit.org/changeset/152403
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug